[package]
name = "rerun-earth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
geo = "0.28.0"
geo-types = "0.7.13"
ordered-float = "4.4.0"
rayon = "1.10.0"
rerun = { version = "0.19.0", features = ["native_viewer", "run", "web_viewer"] }
shapefile = { version = "0.6.0", features = ["geo-types"] }
spade = "2.12.1"
